Fix header panel layout problems; Add "Find more" button to search for skins; Remove existing slots when manual refresh returns no results;

--- a/src/acevortex.scss
+++ b/src/acevortex.scss
@@ -120,3 +120,8 @@
         }
     }
 }
+
+.av-action-center {
+    display: block;
+    margin: 0 auto;
+}
